src/coolcmp/unit_tests/Custom/type_checker/success/case3.cl
class Main {
    main(): Int {{
        let x:Int <- 5 in
            case x of
                x : String => x;
                y : Int => x;
            esac
        ;
        1;
    }};
};